src/test/deca/codegen/valid/non_object_test_not_assignment.deca
// @result ok
// @result ok
{
	boolean x = !true;
	boolean y = !false;
	
	if (x) {
		println("ko");
	} else {
		println("ok");
	}
	
	if (y) {
		println("ok");
	} else {
		println("ko");
	}
}
