src/test/deca/codegen/invalid/test_if_int_var.deca
// @result ok
// @result ok
{
        int x = 234;
        if (x) {
                println("ok");
        } else {
                println("ko");
        }
        x = 0;
        if (x) {
                println("ko");
        } else {
                println("ok");
        }
}

